--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0 # Add the appropriate version
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   file_picker: ^8.0.3
   google_fonts: ^6.2.1
+  firebase_core: ^2.15.0
 
 dev_dependencies:
   flutter_test:
