--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   file_picker: ^8.0.3
   google_fonts: ^6.2.1
   firebase_core: ^3.1.1
-
+  firebase_auth:
 dev_dependencies:
   flutter_test:
     sdk: flutter
